[tool.poetry]
name = "budget-buddy"
version = "0.1.0"
description = ""
authors = ["Mark Wayne Buncaras Menorca <marcuwynu23@gmail.com>"]
readme = "README.md"
packages = [{include = "budget_buddy"}]

[tool.poetry.dependencies]
python = "^3.10"
tabulate = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
